<resources>
    <string name="app_name">Opinionated</string>

    <!--Title Page Strings-->
    <string name="title_welcome_message">Welcome to Opinionated, an app to modernise our democracy</string>
    <string name="title_option_explanation">Select one of the options below to get started.</string>
    <string name="title_login_button">Log In</string>
    <string name="title_admin_button">ADMIN</string>
    <string name="title_create_user_button">Create User</string>


    <!-- Create User Activity Strings -->
    <string name="create_user_title">Create User</string>
    <string name="create_user_email_hint">Email</string>
    <string name="create_user_password_hint">Password</string>
    <string name="create_user_year_of_birth_hint">Year of Birth</string>
    <string name="create_user_postcode">Postcode</string>
    <string name="create_user_gender">Gender</string>
    <string name="create_user_submit_button">SUBMIT</string>

    <!-- Log in Activity Strings -->
    <string name="log_in_title">Log In</string>
    <string name="log_in_email_hint">Email</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_submit_button">SUBMIT</string>
    <!-- Alert Strings -->
    <string name="log_in_alert_title">Incorrect Login</string>
    <string name="log_in_alert_message">The login information provided is incorrect.
        Please try again.</string>
    <string name="log_in_alert_button_text">OK</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Create User Activity Strings -->
    <string name="create_user_alert_title">Sign Up Error</string>
    <string name="create_user_alert_message">The information entered is incorrect.
        Make sure that your email and password are entered correctly.</string>
    <string name="create_user_alert_button_text">OK</string>

    <!-- Home Activity Strings -->
    <string name="home_welcome_message">Welcome, You are signed in as </string>
    <string name="home_questions_answered_message_part1">You have answered </string>
    <string name="home_questions_answered_message_part2"> questions</string>
    <string name="home_answer_questions_button_text">Answer More Questions</string>
    <string name="home_explore_results_btn">Explore the Data</string>
    <string name="home_explore_results_tv_text">Click below to explore the results of the questions you have answered</string>

    <!-- Home Menu Strings -->
    <string name="home_menu_refresh">Refresh</string>
    <string name="home_menu_logout">Logout</string>
    <string name="home_menu_go_home">Go Home</string>
    <string name="answer_question_menu_extra_info">Background Information</string>
</resources>
