<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coderafe.opinionated.activities.TitleActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
        android:id="@+id/title_title_tv"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/title_title_margin"
        android:layout_marginBottom="@dimen/title_title_margin"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_welcome_message_tv"
        android:layout_marginTop="@dimen/title_welcome_message_margin"
        android:text="@string/title_welcome_message"
        android:layout_below="@+id/title_title_tv"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_welcome_message_tv"
        android:id="@+id/title_option_explanation_tv"
        android:text="@string/title_option_explanation"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_margin="@dimen/default_message_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_option_explanation_tv"
        android:id="@+id/title_login_btn"
        android:text="@string/title_login_button"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        android:onClick="logIn"
        android:layout_marginTop="@dimen/default_message_margin"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_login_btn"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        android:id="@+id/title_create_user_btn"
        android:text="@string/title_create_user_button"
        android:onClick="createUser"
        android:layout_marginTop="@dimen/default_message_margin"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
