<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coderafe.opinionated.activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/title_text_size"
        android:text="@string/log_in_title"
        android:layout_marginTop="@dimen/title_title_margin"
        android:id="@+id/log_in_title_tv"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_in_title_tv"
        android:layout_marginTop="@dimen/default_message_margin"
        android:id="@+id/log_in_email_et"
        android:hint="@string/log_in_email_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_in_email_et"
        android:id="@+id/log_in_password_et"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/default_message_margin"
        android:hint="@string/log_in_password_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_in_password_et"
        android:id="@+id/log_in_submit_btn"
        android:layout_marginTop="@dimen/default_message_margin"
        android:layout_centerHorizontal="true"
        android:onClick="authenticateUser"
        android:text="@string/log_in_submit_button"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/log_in_password_et"
        android:layout_marginTop="@dimen/default_message_margin"
        android:id="@+id/log_in_progress_bar"/>

</RelativeLayout>
