<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.coderafe.opinionated.activities.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_home" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/title_title_margin"
        android:id="@+id/home_main_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_welcome_tv"
            android:textSize="@dimen/important_message_text_size"
            android:layout_marginTop="@dimen/title_title_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_questions_answered_tv"
            android:layout_below="@id/home_welcome_tv"
            android:layout_marginTop="@dimen/default_message_margin"
            android:textSize="@dimen/normal_message_text_size"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_message_margin"
            android:text="@string/home_answer_questions_button_text"
            android:layout_below="@id/home_questions_answered_tv"
            android:id="@+id/home_answer_questions_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_message_margin"
            android:id="@+id/home_explore_results_tv"
            android:layout_below="@id/home_answer_questions_btn"
            android:text="@string/home_explore_results_tv_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/home_explore_results_btn"
            android:layout_below="@id/home_explore_results_tv"
            android:text="@string/home_explore_results_btn"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_load_data_progress_bar"
            android:visibility="gone"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
